syntax = "proto3";
package veranablockchain.trustdeposit;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "veranablockchain/trustdeposit/params.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/trustdeposit/types";


// TrustDeposit represents an account's trust deposit
message TrustDeposit {
  string account = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 share = 2;
  uint64 amount = 3;
  uint64 claimable = 4;
}